--- a/司法-民事/海商法.md
+++ b/司法-民事/海商法.md
@@ -1,348 +1,388 @@
-* 1 本法稱船舶者，謂在海上航行及在與海相通能供海船行駛之水上航行之船舶。
+* 1 本法稱船舶者，謂在海上航行及在與海相通水面或水中航行之船舶。
 
-* 2 左列船舶，除船舶碰撞外，不適用本法之規定。一、總噸數不及二十噸，或容量不及二百擔之船舶。二、專用於公務之船舶。三、以櫓櫂為主要運轉方法之船舶。
+* 2 本法稱船長者，謂受船舶所有人僱用主管船舶一切事務之人員；稱海員者，謂受船舶所有人僱用由船長指揮服務於船舶上所有人員。
 
-* 3 左列船舶為中國船舶。一、中國官署所有者。二、中國人民所有者。三、依照中國法律所設立，在中國有本店之左列各公司所有者。甲、無限公司，其股東全體為中國人者。乙、兩合公司或股份兩合公司，其無限責任股東全體為中國人者。丙、股份有限公司，其董事三分之二以上為中國人，並其資本三分二以上為中國人所有者。
+* 3 左列船舶除因碰撞外，不適用本法之規定：一、總噸位未滿二十噸之動力船舶，或未滿五十噸之非動力船舶。二、軍事建制之艦艇。三、專用於公務之船舶。四、本法第一條規定以外之其他船舶。
 
-* 4 凡船舶在船上應備有左列文書。一、國籍證書。二、通行證書。三、海員名稱。四、旅客名冊。五、屬具目錄。六、航海記事簿。
+* 4 船舶之扣押、假扣押，自運送人或船長發航準備完成時起，以迄航行完成時止，不得為之。但為使航行可能所生之債務，不在此限。國境內航行船舶之假扣押，得以揭示方法為之。
 
-* 5 船舶非經登記領有國籍證書，不得航行。但法令另有規定者，不在此限。
+* 5 海商事件本法無規定者，適用民法及其他有關法律之規定。
 
-* 6 船舶之扣押，假扣押，自船長執有發航許可書之時起，以迄於航海完成時止，不得為之。但為使航海可能所生之債務，不在此限。
+* 6 船舶除本法有特別規定外，適用民法關於動產之規定。
 
-* 7 海商本法無規定者，適用民法之規定。
+* 7 除給養品外，凡於航行上及營業上必需之一切設備及屬具，皆視為船舶之一部。
 
-* 8 船舶，除本法有特別規定外，適用民法關於動產之規定。
+* 8 船舶全部或一部之讓與，非作成書面並依左列之規定，不生效力：一、在中華民國，應聲請讓與地或船舶所在地航政主管機關蓋印證明。二、在外國，應聲請中華民國領事館蓋印證明。
 
-* 9 除給養品外，凡於設備上及營業上必要之一切成分及屬具，皆視為船舶之一部。
+* 9 船舶所有權之移轉，非經登記，不得對抗第三人。
 
-* 10 船舶全部或一部之讓與，非作成書面並依左列之規定，不生效力。一、在中國，應呈經讓與地或船舶所在地主管官署，蓋印證明。二、在外國，應呈經中國領事官署，蓋印證明。
+* 10 船舶建造中，承攬人破產，而破產管理人不為完成建造者，船舶定造人，得將船舶及業經交付或預定之材料，照估價扣除已付定金給償收取之，並得自行出資在原處完成建造。但使用船廠，應給與報償。
 
-* 11 船舶所有權之移轉，非經登記，不得對抗第三人。
+* 11 共有船舶之處分，及其他與共有人共同利益有關之事項，應以共有人過半數並其應有部分之價值合計過半數之同意為之。
 
-* 12 船舶建造中承攬人破產而破產管財人不為完成建造者，船舶定造人得將船舶及業經交付或預定之材料，照估價扣除已付定金給償收取之，並得自行出資，在原處完成建造。但使用船廠，應給與報償。
+* 12 船舶共有人有出賣其應有部分時，其他共有人，得以同一價格儘先承買。因船舶共有權一部分之出賣，致該船舶喪失中華民國國籍時，應得共有人全體之同意。
 
-* 13 共有船舶之處分，及其他與共有人共同利益有關之事項，應按各共有人應有部份之價值，以其過半數決之。
+* 13 船舶共有人，以其應有部分供抵押時，應得其他共有人過半數之同意。
 
-* 14 船舶共有人出賣其應有部份時，其他共有人得以同一價格，儘先承買。因船舶共有權一部份之出賣，致該船舶喪失中國國籍時，應得共有人全體之同意。
+* 14 船舶共有人，對於利用船舶所生之債務，就其應有部分，負比例分擔之責。共有人對於發生債務之管理行為，曾經拒絕同意者，關於此項債務，得委棄其應有部分於他共有人而免其責任。
 
-* 15 船舶共有人，以其應有部份供抵押時，應得其他共有人多數之同意。
+* 15 船舶共有人為船長而被辭退或解任時，得退出共有關係，並請求返還其應有部分之資金。前項資金數額，依當事人之協議定之；協議不成時，由法院裁判之。第一項所規定退出共有關係之權，自被辭退之日起算，經一個月不行使而消滅。
 
-* 16 船舶共有人對於利用船舶所生之債務，就其應有部份，負比例分擔之責。共有人對於發生債務之管理行為，曾經拒絕同意者，關於此項債務，得委棄其應有部份於他共有人，而免其責任。
+* 16 共有關係，不因共有人中一人之死亡、破產或禁治產而終止。
 
-* 17 船舶共有人為船長而被辭退時，得退出共有關係，並請求返還其應有部分之資金。前項資金數額，依當事人之協議定之，協議不成時，由法院裁判之。第一項所規定退出共有關係之權，自被辭退之日起算，經一個月不行使而消滅。
+* 17 船舶共有人，應選任船舶經理人經理其營業。船舶經理人之選任，應以共有人過半數並其應有部分之價值合計過半數之同意為之。
 
-* 18 其有關係，不因共有人中一人之死亡、破產或禁治產而終止。
+* 18 船舶經理人關於船舶之營運，在訴訟上或訴訟外代表共有人。
 
-* 19 船舶共有人，應選任船舶經理人經理其營業。如經理人為共有人以外之人時，應經共有人全體之同意。
+* 19 船舶經理人，非經共有人依第十一條規定之書面委任，不得出賣或抵押其船舶。船舶共有人，對於船舶經理人權限所加之限制，不得對抗善意第三人。
 
-* 20 船舶經理人，關於船舶之儀裝及利用，在訴訟上或訴訟外，代表共有人。
+* 20 船舶經理人，於每次航行完成後，應將其經過情形，報告於共有人；共有人亦得隨時檢查其營業情形，並查閱賬簿。
 
-* 21 船舶經理人，非經共有人之書面許可，不得出賣或抵押其船舶。船舶共有人對於船舶經理人權限所加之限制，不得對抗善意第三人。
+* 21 船舶所有人，對左列事項所負責任，以本次航行之船舶價值、運費及其他附屬費為限；船舶所有人不提供船舶價值而委棄其船舶者亦同：一、船長、海員、引水人或其他一切服務於船舶之人員，因執行業務所加損害於第三人之賠償。二、交付船長運送之貨物或船上其他一切財產、物品所受損害之賠償。三、本於載貨證券所生之債務。四、在履行契約中所犯航行過失之賠償。五、船舶所加於港埠、倉庫、航路設備及工作物之損害所應修理之義務。六、關於除去沉船、漂流物之義務及其從屬之義務。七、救助及撈救之報酬。八、在共同海損中屬於船舶所有人應分擔之部分。九、船長在船籍港外，以其職權因保存船舶或繼續航行之實在需要所為行為或契約所生之債務，而其需要非由發航時準備不足、船具缺陋或設備疏忽而生者。前項運費，對於依約不能收取之運費及票價不包括在內。第一項所稱附屬費，指船舶因受損害應得之賠償。但保險金不包括在內。第一項第一款所稱之損害，包括身體之傷害及生命之喪失。
 
-* 22 船舶經理人於每次航海完成後，應將其經過情形報告於共有人。
+* 22 前條責任限制之規定，於左列情形不適用之：一、本於船舶所有人之行為或過失所生之債務。二、前條第九款所定債務，經船舶所有人之允許者。三、本於船長、海員及其他服務船舶之人員之僱用契約所生之債務。
 
-* 23 船舶所有人對左列事項所負責任，以本次航海之船舶價值、運費，及其他附屬費為限。一、船長，船員，引水人或其他一切服務於船舶之人員，因執行業務所加損害於第三人之賠償。二、交付船長運送之貨物，或船上其他一切財產物品所受損害之賠償。三、本於載貨證券所生之債務。四、在履行契約中所犯航海過失之賠償。五、船舶所加於海港、倉庫及航路之工作物之損害所應修理之義務。六、關於除去沉船、漂流物之義務，及其從屬之義務。七、救助及撈救之報酬。八、在共同海損中，屬於船舶所有人應分擔之部分。九、船長在船籍港外，以其職權，因保存船舶或繼續航海之實在需要所為行為，或契約所生之債務，而其需要非由發航時準備不足，船具缺陋或設備疏忽而生者。前項運費，包括旅客票價在內。第一項所稱附屬費，指船舶因受損害應得之賠償。
+* 23 船舶所有人如依第二十一條之規定限制其責任者，對於本次航行之船舶價值，應證明之。船舶價值之估計，以左列時期之船舶狀態為準：一、因碰撞或其他事變所生共同海損之債權，及事變後以迄於第一到達港時所生之一切債權，其估價依船舶於到達第一港時之狀態。二、關於船舶在停泊港內發生事變所生之債權，其估價依船舶在停泊港內事變發生後之狀態。三、關於貨載之債權或本於載貨證券而生之債權，除前二款情形外，其估價依船舶於到達目的港時或航行中斷地之狀態。如貨載應送達於數個不同之港埠，而損害係因同一原因而生者，其估價依船舶於到達該數港中之第一港時之狀態。四、關於第二十一條所規定之其他債權，其估價依船舶航行完成時之狀態。
 
-* 24 前條責任限制之規定，於左列情形不適用之。一、本於船舶所有人之行為或過失所生之債務。二、前條第九款所定債務，經船舶所有人之允許者。三、本於船員及其他服務船舶之人員之僱用契約所生之債務。
+* 24 左列各款債權，有優先受償之權：一、訴訟費及為債權人之共同利益而保存船舶或標賣，並分配賣價所支出之費用，船鈔港埠建設費、引水費、拖船費，自船舶開入最後港後之看守費、保存費、檢查費。二、船長、海員及其他服務船舶人員，本於僱傭契約所生之債權，其期間未滿一年者。三、為救助及撈救所負之費用及報酬，及船舶對於共同海損之分擔額。四、船舶所有人或船長、海員之過失所致之船舶碰撞或其他航行事變，旅客及船長、海員之身體傷害，貨載之毀損或滅失，加於港埠設施之損害賠償。五、船長在船籍港外，依其職權為保存船舶或繼續航行之實在需要所為之行為，或契約所生之債權。六、對於託運人所負之損害賠償。前項第一款至第五款所列優先權之位次，在船舶抵押權之前。
 
-* 25 船舶所有人欲依第二十三條之規定限制其責任者，對於本次航行之船舶價值，應證明之。船舶價值之估計，以左列時期之船舶狀態為準。一、因碰撞或其他事變所生共同海損之債權，及事變後以迄於第一到達港時所生之一切債權，其估價依船舶於到達第一港時之狀態。二、關於船舶在停泊港內發生事變所生之債權，其估價依船舶在停泊港內事變發生後之狀態。三、關於積貨之債權，或本於載貨證券而生之債權，除前二款情形外，其估價依船舶於到達目的港時，或航海中斷地之狀態，如積貨應送達於數個不同之海港，而損害係因同一原因而生者，其估價依船舶於到達該數港中之第一港時之狀態。四、關於第二十三條所規定之其他債權，其估價依船舶航海完成時之狀態。
+* 25 依前條規定，得優先受償之標的物如左：一、船舶、船舶設備及屬具或其殘餘物。二、在發生優先債權之航行期內之運費。三、船舶所有人因本次航行中船舶所受損害或運費損失應得之賠償。四、船舶所有人因共同海損應得之賠償。五、船舶所有人在航行完成前，為施行救助或撈救所應得之報酬。
 
-* 26 船舶所有人或船舶共有人為船長時，僅得對於其航海過失，及船舶服務人員之過失，依第二十三條之規定，主張限制其責任。
+* 26 第二十四條第二款之債權，得就同一僱傭契約期內所得之全部運費，優先受償，不受前條第二款之限制。
 
-* 27 左列各款債權，有優先受償之權。一、訴訟費，及為債權人之共同利益而保存船舶或標賣，並分配賣價所支出之費用，噸稅，燈塔稅，港稅，及其他同類之捐稅，引水費，拖船費，自船舶開入最後港後之看守費，保存費及檢查費。二、船長船員及其他服務船舶人員，本於僱傭契約所生之債權，其期間未滿一年者。三、為撈救及救助所負之報酬，及船舶對於共同海損之分擔額。四、船舶所有人或船員之過失所致之船舶碰撞，或其他航海事變，旅客及船員之身體傷害，積貨之滅失或損壞，加於海港、倉庫航路之工作物之損害賠償。五、船長在船籍港外，依其職權為保存船舶或繼續航海之實在需要所為之行為，或契約所生之債權。六、對於託運人所負之損害賠償。前項第一款至第四款所列優先權之位次，在船舶抵押權之前。
+* 27 屬於同次航行之優先債權，其位次依第二十四條各款之規定。一款中有數債權者，不分先後，比例受償。第二十四條第三款及第五款所列債權，如有二個以上屬於同一種類，其發生在後者優先受償。因同一事變所生之債權，視為同時發生之債權。
 
-* 28 依前條規定，得優先受償之標的物如左。一、船舶，船具及屬具，或其殘餘物。二、在發生優先債權之航海期內之運費。三、船舶所有人，因本次航海中船舶所受損害或運費損失應得之賠償。四、船舶所有人，因共同海損應得之賠償。五、船舶所有人，在航海完成前，為施行救助或撈救，所應得之報酬。
+* 28 不屬於同次航行之優先債權，其後次航行之優先債權，先於前次航行之優先債權。
 
-* 29 第二十七條第二款之債權，得就同一僱傭契約期內所為一切航海應得運費之全部，優先受償，不受前條第二款之限制。
+* 29 優先債權，不因船舶所有權之移轉而受影響。
 
-* 30 屬於同次航海之優先債權，其位次依第二十七條各款之規定。一款中有數債權者，不分先後比例受償。第二十七條第三款及第五款所列債權，如有二個以上屬於同一種類，其發生在後者，優先受償。因同一事變所生之債權，視為同時發生之債權。
+* 30 第二十四條各款之優先權，除法律別有規定外，以左列原因而消滅：一、該條第一款情形，船舶離去債權發生地者。二、該條第二款情形，自債權人得為請求之日起，經過一年不行使者。三、該條第三款情形，自救助或撈救之行為完成，或海損分擔確定之日起，經過六個月不行使者。四、該條第四款、第六款情形，自損害發生之日起，經過六個月不行使者。五、該條第五款情形，自債權得為請求之日起，經過六個月不行使者。
 
-* 31 不屬於同次航海之優先債權，其後次航海之優先債權，先於前次航海之優先債權。
+* 31 船舶抵押權之設定，應以書面為之。
 
-* 32 優先債權，不因船舶所有權之移轉而受影響。
+* 32 船舶抵押權，得就建造中之船舶設定之。
 
-* 33 第二十七條各款之優先權，除法律別有規定外，以左列原因而消滅。一、該條第一款情形，船舶離去債權發生地者。二、該條第二款情形，自債權得為請求之日起，經過一年不行使者。三、該條第三款情形，自救助或撈救之行為完成，或海損分擔確定之日起，經過六個月不行使者。四、該條第四款第六款情形，自損害發生之日起，經過六個月不行使者。五、該條第五款情形，自債權得為請求之日起，經過六個月不行使者。
+* 33 船舶抵押權之設定，除法律別有規定外，僅船舶所有人或受其特別委任之人始得為之。
 
-* 34 船舶抵押權之設定，應以書面為之。
+* 34 船舶抵押權之設定，非經登記不得對抗第三人。
 
-* 35 船舶抵押權，得就建造中之船舶設定之。
+* 35 船舶共有人中一人或數人，就其應有部分所設定之抵押權，不因分割或出賣而受影響。
 
-* 36 船舶抵押權之設定，除法律別有規定外，僅船舶所有人，或受其特別委任之人始得為之。
+* 36 船長應為中華民國國民。
 
-* 37 船舶抵押權之設定，非經登記，不得對抗第三人。
+* 37 船長由船舶所有人僱用之。船舶所有人得隨時辭退船長。但無正當理由而辭退時，船長得請求賠償因此所受之損害。
 
-* 38 船舶共有人中一人，或數人，就其應有部份所設定之抵押權，不因分割或出賣而受影響。
+* 38 船長在航行中縱其僱用期限已滿，亦不得自行解除或中止其職務。
 
-* 39 船長，由船舶所有人僱用之。船舶所有人，得隨時辭退船長，但無正當理由而辭退時，船長得請求賠償因此所受之損害。
+* 39 船長對於執行職務中之過失，應負責任，如主張無過失時，應負證明之責。
 
-* 40 船長在航海中，縱其僱用期限已滿，亦不得自行解除，或中止其職務。
+* 40 船舶之指揮，僅由船長負其責任，船長為執行職務，有命令與管理在船海員及在船任何人之權。船長非因事變或不可抗力，不得變更船舶之預定航程。
 
-* 41 船長對於執行職務中之過失，應負責任，如主張無過失時，應負證明之債。
+* 41 船長在航行中，為維持船上治安及保障國家法益，得為緊急處分。
 
-* 42 船舶之指揮，僅由船長負其責任。船長非因事變或不可抗力，不得變更船舶之預定航程。
+* 42 旅客或海員死亡或失蹤時，其遺留於船上之財物，船長應以最有利於繼承人之方法處置之。
 
-* 43 船長在航海中，為維持船上治安，得為緊急處分。
+* 43 船長在航行中不論遇何危險，非經諮詢各重要海員之意見，不得放棄船舶。但船長有最後決定權。放棄船舶時，船長非將旅客、海員救出不得離船，並應盡其力所能及，將船舶文書、郵件、金錢及貴重物救出。船長違反第一項之規定者，就自己所採措施負其責任；違反第二項之規定者，處七年以下有期徒刑，因而致有死亡者，處三年以上、十年以下有期徒刑。
 
-* 44 船長在航海中，不論遇何危險，非經諮詢各重要船員之意見，不得放棄船舶。放棄船舶時，船長非將旅客船員救出，不得離船，並應盡其力所能及，將船舶文書、郵件、金錢及貴重貨物救出。船長違反前項之規定者，處七年以下有期徒刑。因而致有死亡者，處無期徒刑或十年以上有期徒刑。
+* 44 船長在船舶上，除船舶文書外，應備有關於載客、載貨之各項文件。
 
-* 45 船長在船舶上，除船舶文書外，應備有關於載貨之各項文件。
+* 45 主管機關依法查閱船舶文書時，船長應即送驗。
 
-* 46 主管官署，依法查閱船舶文書時，船長應即呈驗。
+* 46 船長於船舶到達目的港，或入停泊港後，除休假日外，應在二十四小時內，報請主管機關檢定其船舶之到達日、時。
 
-* 47 船長於船舶到達目的港，或入停泊港後，除休假日外，應在二十四小時內，報請主管官署檢定其船舶之到達日時。
+* 47 船長應於前條所定之期限內，將船舶文書檢送於左列機關：一、在國內，檢送於該目的港或停泊港之主管機關。二、在國外，檢送於中華民國領事館。前項機關應將船舶到港及離港日、時，在航行記事簿上簽證，於船舶發航時發還船長。
 
-* 48 船長應於前條所定之期限內，將船舶文書，呈送於左列官署。一、在中國，呈送於該目的港或停泊港之主管官署。二、在外國，呈送於中國領事官署。前項官署，應將船舶到港及離港日時，在航海記事簿上簽證，於船舶發航時發還船長。
+* 48 船長除有必要外，不得開艙，亦不得在船舶文書未經送驗前卸載貨物。
 
-* 49 船長除有必要外，不得開艙。亦不得在船舶文書未經呈驗前卸載任何貨物。
+* 49 船長遇船舶沉沒、擱淺、碰撞、強迫停泊，或其他意外事故及有關於船舶貨載、海員或旅客之非常事變時，應作成海事報告，載明實在情況，檢送主管機關。前項海事報告，應有海員或旅客之證明。
 
-* 50 船長遇船舶沉沒、擱淺、意外事故，強制停泊或其他有關於船舶積貨、船員或旅客之非常事變時，應作成海事報告，載明實在情況，呈送主管官署。前項海事報告，應有船員或旅客之證明。
+* 50 海事報告，未經海員或旅客證明者，不能發生裁判上之證據力。但其報告係船長於遭難後，獨身脫險之處所作成者，不在此限。
 
-* 51 海事報告，未經船員或旅客證明者，不能發生裁判上之證據力。但其報告，係船長於遭難後，獨身脫險之處所作成者，不在此限。
+* 51 船長非為支付船舶之修繕費救助費，或其他繼續航行所必要之費用，不得為左列行為：一、為金錢之借入。二、將貨載之全部或一部變賣或出質。船長變賣或出質貨載時，其損害賠償額，依其貨物應到達時目的港之價值定之。但應扣除因變賣或出質所減省之費用。
 
-* 52 船長得代表船舶所有人僱用服務於船舶之人員，並得訂立航海所必要之契約。船舶在船籍港或在艤裝港，而船舶所有人或其代理人亦在該港時，船長非經其同意，不得為前項行為。
+* 52 船舶在航行中，船長死亡或因故不能執行職務而未有繼任人時，應由從事駕駛之海員中職位最高之一人代理執行其職務。
 
-* 53 船舶非經第四十八條第一項所列官署證明為不堪航海者，船長非受船舶所有人特別委託，不得變賣之。但契約另有訂定者，不在此限。違反前項規定而為變賣者，其變賣無效。如有損害，並應賠償。
+* 53 船長違反第三十八條之規定者，處六月以下有期徒刑；違反第四十四條至第四十八條之規定者，處拘役或五百元以下之罰金。
 
-* 54 船長非為支付船舶之修繕賣、救助費或其他繼續航海所必要之費用，不得為左列行為。一、抵押船舶。二、為金錢之借入。三、將積貨之全部或一部變賣或出質。船長變賣或出質積貨時，其損害賠償額，依其貨物應到達時目的港之價值定之。但應扣除因變賣或出質所減省之費用。
+* 54 船舶所有人僱用海員，應簽訂僱傭契約，該項契約經雙方同意簽訂之。在國內應送請航政機關，在國外送請中華民國領事館認可；僱傭契約修正或終止時亦同。國內無航政機關或國外無領事館之地區，應於到達船籍港二十四小時內補辦認可手續。海員依法令須備具規定資格及證明者，其僱傭契約之簽訂，以合格人員為限。
 
-* 55 船長如將貨物裝載於甲板上致生損害或滅失時，應負責任。但經託運人之同意或為航運種類或商業習慣所許者，不在此限。
+* 55 僱傭契約應載明左列事項：一、海員姓名、年齡、籍貫。二、職務名稱。三、訂立日期及地點。四、服務船舶名稱。五、航行種類。六、薪資及津貼。七、僱傭期間。八、伙食標準。九、其他雙方協議事項。
 
-* 56 船長違反第四十條及第四十五條至第四十九條之規定者，處六個月以下有期徒刑或拘役或五百圓以下之罰金。
+* 56 船舶有左列情事之一者，僱傭契約即告終止：一、船舶已沉沒或已失蹤者。二、船舶已完全失去安全航行之能力者。船舶於四個月內無存在消息者，以失蹤論。海員雖僱傭契約終止，但因施救船舶人命或貨物之緊急措施必須工作者，仍認為契約繼續有效。
 
-* 57 船員關於其職務，應服從其上級船員及船長之命令。船員非經許可，不得離船。
+* 57 如有左列情事之一者，船舶所有人得終止僱傭契約：一、海員不能勝任職務者。二、海員怠忽職務致遭重大損失者。三、海員不遵船長指定時間內上船者。四、海員在船擾亂秩序而情節重大者。五、海員因第六十七條但書之事由受傷或患病，致不能工作者。六、海員故意損害船舶設備及屬具者。
 
-* 58 船員不得在船舶上私載貨物。如私載之貨物為違禁品，或有致船舶或積貨受損害之虞者，船長得將該貨物投棄。
+* 58 如有左列情事之一者，海員得終止僱傭契約：一、船舶喪失國籍者。二、違反僱傭契約之規定者。三、受傷或患病致不能繼續工作者。四、發航前隱匿真正目的港致中途變更預定航程者。五、海員介紹他人接替其職務，經船舶所有人或船長同意者。
 
-* 59 按航給薪之船員，於航程或航海日數延長時，得按薪額比例，請求增薪。但於航程或航海日數縮短時，不得減薪。
+* 59 無定期僱傭契約，船舶所有人或海員均得於七天前，以書面通知對方終止契約。
 
-* 60 船員於服務期內受傷或患病者，由船舶所有人負擔治療費。但其受傷或患病，係因酒醉，或重大過失，或不守紀律之行為所致者，不在此限。
+* 60 定期僱傭契約，其期限於航行中屆滿者，以船舶到達第一港後，經過四十八小時為終止。
 
-* 61 船員非因執行職務而受傷或患病，已逾三個月者，船舶所有人得停止治療費之負擔。
+* 61 海員於受僱港以外，其僱傭關係終止時，不論任何原因，船長有送回原港之義務；其因患病或受傷而上陸者亦同。前項送回原港之義務，包括運送、居住、食物及其他必要費用之負擔而言。海員被遺送回國時，如有在航程中擔任工作者，應得報酬。
 
-* 62 船員因受傷或患病致死，而其治療費由船舶所有人負擔者，並應負擔其埋葬費。
+* 62 海員不得在船舶上私載貨物，如私載之貨物為違禁品，或有致船舶或貨載受損害之虞者，船長得將該貨物投棄。
 
-* 63 船員因受傷或患病上陸，應由船舶所有人支給必要之費用。
+* 63 按航給薪之海員，於航程或航行日數延長時，得按薪額比例請求增薪。但於航程或航行日數縮短時，不得減薪。
 
-* 64 船員在船舶所有人負擔治療費之期間內，仍支原薪。
+* 64 船舶所有人於發航前，非因海員自己之事由而辭退海員時，如海員係按月給薪者，自辭退之日起，加給一個月薪金，其在發航後辭退者，加給三個月薪金；如係按航給薪而在發航前辭退者，應給半薪，其在發航後辭退者，應給全薪。
 
-* 65 船員於受僱港以外，其僱傭關係終止時，不論任何原因，船長有送回原港之義務。其因患病或受傷而上陸者，亦同。前項送回原港之義務，包括運送居住食物及其他必要費用之負擔而言。
+* 65 因不可抗力致不能航行而辭退海員時，海員僅得就其已服務之日數請求薪金。
 
-* 66 定期僱傭契約，其期限於航海中屆滿者，以船舶到達第一港後，經過四十八小時為終止。
+* 66 海員關於其職務，應服從其上級海員及船長之命令，非經許可，不得離船。
 
-* 67 船員不論其為按月或按航給薪，如在受僱期內死亡者，自死亡之日起，比照原薪，加給三個月薪金。如因執行職務致死亡者，應自死亡之日起，比照原薪，加給一年薪金。
+* 67 海員於服務期內，受傷或患病者，由船舶所有人負擔治療費。但其受傷或患病係因酗酒或重大過失或不守紀律之行為所致者，不在此限。
 
-* 68 船長或船舶所有人，於發航前無正當事由而辭退船員時，如船員係按月給薪者，自辭退之日起，加給一個月薪金，其在發航後辭退者，加給二個月薪金。如係按航給薪，而在發航前辭退者，應給半薪。其在發航後辭退者，應給全薪。
+* 68 海員非因執行職務而受傷或患病已逾三個月者，船舶所有人得停止治療費之負擔。
 
-* 69 因不可抗力，致航海不能而辭退船員時，船員僅得就其已服務之日數，請求薪金。
+* 69 海員因受傷或患病上陸，應由船舶所有人支給必要之費用。
 
-* 70 貨物運送契約，為左列二種。一、以件貨之運送為目的者。二、以船舶之全部或一部，供運送為目的者。
+* 70 海員在船舶所有人負擔治療費之期間內，仍支原薪津。
 
-* 71 以船舶之全部或一部供運送為目的之運送契約，應以書面為之。
+* 71 海員不論其為按月或按航給薪，如在受僱期間因執行職務而受傷或患病，雖已痊愈而成殘廢者，自傷病痊愈後，得按其殘廢情況之輕重，比照原薪津給與六個月以上、二十個月以下之殘廢補助金。
 
-* 72 前條運送契約，應載明左列事項。一、當事人之姓名住所。二、船舶名稱國籍及噸數。三、運送貨物之種類及其概數。四、運送之預定期限。五、運費。
+* 72 海員在職期間死亡而有法定繼承人者，船舶所有人應一次給與相等於原薪津六個月之撫卹金，如其服務在三年以上者，每增加一年，加給一個月。船舶沉沒或失蹤，致海員死亡，船舶所有人應按前項之規定給與撫卹金。
 
-* 73 以船舶之全部或一部供運送之契約，不因船舶所有權之移轉而受影響。
+* 73 海員因執行職務死亡，或因執行職務而受傷、患病以致死亡，而有法定繼承人者，船舶所有人除按前條規定之服務年資應給與撫卹金外，並應一次加給原薪津十二個月之撫卹金。
 
-* 74 運送人所供給之船舶，有瑕疵不能達運送契約之目的時，託運人得解除契約。
+* 74 海員在職死亡或因傷病死亡者，船舶所有人應給與相等於原薪津三個月之喪葬費。
 
-* 75 以船舶之全部供運送時，託運人於發航前，得解除契約。但應支付運費三分之一。如託運人已裝載積貨之全部或一部者，並應負擔裝卸之費用。
+* 75 海員在同一船舶所有人所屬船舶連續服務在十年以上，而年齡已滿五十五歲者，得聲請退休；年齡已滿六十五歲者，應強迫退休。
 
-* 76 以船舶之一部供運送時，託運人於發航前，非支付其運費之全部，不得解除契約。如託運人已裝載貨物之全部或一部者，並應負擔裝卸費用，及賠償加於其他積貨之損害。前項情形，託運人皆為契約之解除者，各託運人僅負前條所規定之責任。
+* 76 海員退休時，船舶所有人應一次給與退休金，並不得低於左列之規定：一、年齡已滿六十歲，連續服務滿十年者，給與相等於退休時薪津十五個月之退休金，自第十一年起，每增加一年，加給一個半月。二、年齡已滿五十五歲，連續服務滿十年者，依照前款規定標準，給與百分之八十五金額。
 
-* 77 前二條之規定，於按時或為數次繼續航海所訂立之運送契約，不適用之。
+* 77 海員依本法之規定應得之權利，如船舶所有人為其保險而負擔全部保險費者，所領賠償金額，有不足時，應予補足。前項保險費如由海員負擔一部分者，其所領賠償金額，應全部歸海員所有。
 
-* 78 以船舶之全部於一定時期內供運送者，託運人僅得以約定，或以船舶之性質而定之方法，使為運送。
+* 78 殘廢補助金、撫卹金、喪葬費及退休金之給付標準，交通部應就各公營航業組織所定之數額中，認為適當者核定之，核定後所有公民營航業組織，就本條之給付，不得低於該標準。
 
-* 79 前條託運人，僅就船舶可使用之期間，負擔運費。但因航海事變所生之停止，仍應繼續負擔運費。前項船舶之停止，係因船舶所有人或其代理人之行為，或因船舶之狀態所致者，託運人不負擔運費。如有損害，並得請求賠償。船舶行蹤不明時，託運人以得最後消息之日為止，負擔運費之全部。並自最後消息後以迄於該次航海通常所需要之期間應完成之日，負擔運費之半數。
+* 79 本章有關海員待遇、傷病之規定，於船舶經政府徵租時，除另有規定或約定者外，由徵租機關支給之。依年資計算之退休金及撫卹金，由船舶所有人及徵租機關按其服務及徵租期間比例分擔。但因執行徵租職務而致死亡者，其撫卹金由徵租機關負擔之。
 
-* 80 以船舶之全部或一部供運送者，其託運人所裝載之貨物，不及約定之數量時，仍應負擔全部運費。但應扣除船舶因此所減省費用之全部，及因另裝貨物所取得運費四分之三。
+* 80 本章有關海員僱傭契約、薪津、傷病、撫卹、退休及保險之規定，於船長得適用之。
 
-* 81 以船舶之全部或一部供運送者，於卸載貨物之準備完成時，船長應即通知受貨人。件貨之運送，受貨人應依船長之指示，即將貨物卸載。
+* 81 貨物運送契約為左列二種：一、以件貨之運送為目的者。二、以船舶之全部或一部供運送為目的者。
 
-* 82 受貨人怠於受領貨物時，船長得將貨物提存，並通知受貨人。受貨人不明或受貨人拒絕受領貨物時，船長應提存貨物，並通知託運人。
+* 82 以船舶之全部或一部供運送為目的之運送契約，應以書面為之。
 
-* 83 以船舶之全部或一部供運送者，其裝載期間，以託運人接到船舶準備裝貨通知之翌日起算，卸載期間，以受貨人按照契約應開始卸貨時之翌日起算。無約定時，裝卸期間及其起算，從各地之習慣。前項裝卸期間，休假日不算入。裝載或卸載，超過裝卸期間者，運送人得按其超過之日期，請求相當損害賠償。前項超過裝卸期間，休假日亦算入之。
+* 83 前條運送契約，應載明左列事項：一、當事人之姓名、住所。二、船舶之國籍。三、運送貨物之種類及其噸數。四、運送之預定期限。五、運費。
 
-* 84 裝卸期間，僅遇裝卸不可能之日，始不算入。超過裝卸期間，雖遇有不可抗力時，亦算入之。
+* 84 以船舶之全部或一部供運送之契約，不因船舶所有權之移轉而受影響。
 
-* 85 船長於貨物裝載後，因託運人之請求，應發給載貨證券。
+* 85 運送人所供給之船舶有瑕疵，不能達運送契約之目的時，託運人得解除契約。
 
-* 86 載貨證券，應載明左列各款事項，由船長簽名。一、船舶名稱及國籍。二、託運人之姓名住所。三、貨物之種類、品質、數量，及其包皮之種類、個數及記號。四、裝載港及目的港。五、運費。六、載貨證券之份數。七、填發之年月日。
+* 86 以船舶之全部供運送時，託運人於發航前得解除契約，但應支付運費三分之一，如託運人已裝載貨物之全部或一部者，並應負擔裝卸之費用。
 
-* 87 載貨證券有數份者，在貨物目的港請求交付貨物之人，縱僅持有載貨證券一份，船長不得拒絕交付。不在貨物目的港時，船長非接受載貨證券之全數，不得為貨物之交付。二人以上之載貨證券持有人請求交付貨物時，船長應即將貨物提存。並通知曾為請求之各持有人。船長已依第一項之規定交付貨物之一部後，他持有人請求交付貨物者，對於其賸餘之部分亦同。
+* 87 以船舶之一部供運送時，託運人於發航前，非支付其運費之全部，不得解除契約，如託運人已裝載貨物之全部或一部者，並應負擔裝卸費用及賠償加於其他貨載之損害。前項情形，託運人皆為契約之解除者，各託運人僅負前條所規定之責任。
 
-* 88 載貨證券之持有人有二人以上者，其中一人，先於他持有人受貨物之交付時，他持有人之載貨證券，失其效力。載貨證券之持有人有二人以上，而船長尚未交付貨物者，其持有先受發送或交付之證券者，得先於他持有人，行使其權利。
+* 88 前二條之規定，於按時或為數次繼續航行所訂立之運送契約，不適用之。
 
-* 89 民法第六百二十七條至第六百三十條，及第六百四十九條，關於提單之規定，於載貨證券準用之。
+* 89 以船舶之全部於一定時期內供運送者，託運人僅得以約定或以船舶之性質而定之方法使為運送。
 
-* 90 船舶所有人，應擔保船舶於發航時有安全航海之能力。船舶所有人，為免除前項責任之主張時，應負舉證之責。
+* 90 前條託運人，僅就船舶可使用之期間負擔運費。但因航行事變所生之停止，仍應繼續負擔運費。前項船舶之停止，係因運送人或其代理人之行為或因船舶之狀態所致者，託運人不負擔運費，如有損害，並得請求賠償。船舶行蹤不明時，託運人以得最後消息之日為止，負擔運費之全部，並自最後消息後，以迄於該次航行通常所需之期間應完成之日，負擔運費之半數。
 
-* 91 運送人對於禁運及偷運貨物之運送，應拒絕之。其貨物之性質，足以毀損船舶或危害海員旅客之健康者，亦同。違反前項之規定者，對於因此所生之損害，負賠償責任。
+* 91 以船舶之全部或一部供運送者，託運人所裝載之貨物不及約定之數量時，仍應負擔全部運費。但應扣除船舶因此所減省費用之全部，及因另裝貨物所取得運費四分之三。
 
-* 92 船長發現未經報明之貨物，得在裝載港將其起陸，或使支付同一航程同種貨物應付最高額之運費。如有損害，並得請求賠償。前項貨物在航海中發現時，如係違禁物，或其性質足以發生損害者，船長得投棄之。
+* 92 託運人因解除契約，應付全部運費時，得扣除運送人因此減省費用之全部，及另裝貨物所得運費四分之三。
 
-* 93 船舶發航後，因不可抗力不能到達目的地，而將原裝貨物運回時，縱其船舶約定為去航及歸航之運送，託運人僅負擔去航運費。
+* 93 以船舶之全部或一部供運送者，於卸載貨物之準備完成時，運送人或船長應即通知受貨人。件貨運送之受貨人，應依運送人或船長之指示，即將貨物卸載。卸載之貨物離船時，運送人或船長解除其運送責任。
 
-* 94 船舶在航海中，因海上事故而須修繕時，如託運人於到達目的地前提取貨物者，應付全部運費。
+* 94 受貨人怠於受領貨物時，運送人或船長得以受貨人之費用，將貨物寄存於港埠管理機關或合法經營之倉庫，並通知受貨人。受貨人不明或受貨人拒絕受領貨物時，運送人或船長得依前項之規定辦理，並通知託運人及受貨人。
 
-* 95 船舶在航海中遭難，或不能航海，而貨物仍由船長設法運到目的地時，如其運費較低於約定之運費者，託運人減支兩運費差額之半數。如新運費等於約定之運費，託運人不負擔任何費用。如新運費較高於約定之運費，其增高額，由託運人負擔之。
+* 95 以船舶之全部或一部供運送者，其裝載期間，以託運人接到船舶準備裝貨通知之翌日起算，卸載期間，以受貨人按照契約應開始卸貨時之翌日起算；無約定時，裝卸期間及其起算，從各地之習慣。前項裝卸期間，休假日不算入。裝載或卸載，超過裝卸期間者，運送人得按其超過之日期，請求相當損害賠償。前項超過裝卸期間，休假日亦算入之。
 
-* 96 託運人因解除契約應負全部運費時，得扣除運送人因此儉省費用之全部，及另裝貨物所得運費四分之三。
+* 96 裝卸期間，僅遇裝卸不可能之日始不算入，超過裝卸期間，雖遇有不可抗力時，亦算入之。
 
-* 97 因不可歸責於船舶所有人、運送人，或其代理人之事由所致之滅失或損害，船舶所有人運送人不負責任。為前項不負責之主張者，應負舉證之責。
+* 97 運送人或船長於貨物裝載後，因託運人之請求，應發給載貨證券。
 
-* 98 託運人於載貨證券，故意虛報貨物之性質或價值時，運送人或船舶所有人，對於其貨物之滅失或損害，不負責任。
+* 98 載貨證券，應載明左列各款事項，由運送人或船長簽名：一、船舶名稱及國籍。二、託運人之姓名、住所。三、依照託運人書面通知之貨物種類、品質、數量、情狀及其包皮之種類、個數及標誌。四、裝載港及目的港。五、運費。六、載貨證券之份數。七、填發之年、月、日。前項第三款之通知事項，如與所收貨物之實際情況有顯著跡象，疑其不相符合或無法核對時，運送人或船長得不予載明。
 
-* 99 貨物未經船長或運送人之同意而裝載時，船舶所有人或運送人，對於其貨物之滅失或損害，不負責任。
+* 99 託運人對於交運貨物之種類、品質、數量、情狀及其包皮之種類、個數暨標誌之通知，應向運送人保證其正確無訛，其因通知不正確所發生或所致之一切毀損、滅失及費用，由託運人負賠償責任。運送人對於前項賠償請求權，不得以之限制其載貨證券之責任，對抗託運人以外之第三人。
 
-* 100 載貨證券之發給人，對於依載貨證券所記載應為之行為，均應負責。前項發給人，對於貨物之各連續運送人之行為，應負保證之責。但各連續運送人，僅對於其自已航程中所生之滅失，損害及遲到，負其責任。
+* 100 貨物一經有受領權利人受領，視為運送人已依照載貨證券之記載，交清貨物。但有左列情事之一者，不在此限：一、提貨前或當時，受領權利人已將毀損、滅失情形，以書面通知運送人者。二、毀損、滅失不顯著，而於提貨後三日內以書面通知運送人者。三、在收貨證件上註明毀損或滅失者。受領權利人之損害賠償請求權，自貨物受領之日或自應受領之日起，一年內不行使而消滅。
 
-* 101 旅客之運送，除本節另有規定外，準用關於貨物運送之規定。
+* 101 運送人或船舶所有人所受之損害，非由於託運人或其代理人、受僱人之過失所致者，託運人不負賠償責任。
 
-* 102 旅客之膳費，包括於票價之內。
+* 102 載貨證券有數份者，在貨物目的港請求交付貨物之人，縱僅持有載貨證券一份，運送人或船長不得拒絕交付；不在貨物目的港時，運送人或船長非接受載貨證券之全數，不得為貨物之交付。二人以上之載貨證券持有人請求交付貨物時，運送人或船長應即將貨物按照第九十四條之規定寄存，並通知曾為請求之各持有人。運送人或船長，已依第一項之規定，交付貨物之一部後，他持有人請求交付貨物者，對於其賸餘之部分亦同。
 
-* 103 船長應依船票所載，運送旅客至目的地。船長違反前項規定時，旅客得解除契約。如有損害，並得請求賠償。
+* 103 載貨證券之持有人有二人以上者，其中一人先於他持有人受貨物之交付時，他持有人之載貨證券失其效力。載貨證券之持有人有二人以上，而運送人或船長尚未交付貨物者，其持有先受發送或交付之證券者，得先於他持有人行使其權利。
 
-* 104 旅客於發航前，得給付票價三分之一，解除契約。但因死亡，疾病，或其他基於本身不得已之事由不能航海者，運送人得請求票價四分之一。
+* 104 民法第六百二十七條至第六百三十條關於提單之規定，於載貨證券準用之。
 
-* 105 旅客在船舶發航或航海中，不依時登船者，仍應給付全部票價。
+* 105 運送契約或載貨證券記載條款、條件或約定，以免除運送人或船舶所有人對於因過失或本章規定應履行之義務而不履行，致有貨物毀損、滅失之責任者，其條款、條件、約定不生效力。
 
-* 106 船舶不於預定之日發航者，旅客得解除契約。
+* 106 運送人或船舶所有人於發航前及發航時，對於左列事項，應為必要之注意及措置：一、使船舶有安全航行之能力。二、配置相當海員設備及船舶之供應。三、使貨艙、冷藏室及其他供載運貨物部分適合於受載運送與保存。船舶於發航後因突失航行能力所致之毀損或滅失，運送人不負賠償責任。運送人或船舶所有人為免除前項責任之主張，應負舉證之責。
 
-* 107 旅客在航海中，自願上陸時，仍負擔全部票價，其因疾病上陸或死亡時，僅按其已運送之航程，負擔票價。
+* 107 運送人對於承運貨物之裝卸、搬移、堆存、保管、運送及看守，應為必要之注意及處置。
 
-* 108 船舶因不可抗力，不能繼續航海時，船長應設法將旅客運送至目的地。
+* 108 運送人對於禁運及偷運貨物之運送，應拒絕之；其貨物之性質足以毀損船舶或危害船舶上人員之健康者亦同。運送人違反前項之規定者，對於因此所生之損害負賠償責任。
 
-* 109 船長在航海中，為船舶之修繕時，非以同等船舶完成其航海者，對於旅客，應無償供給居住及給養。
+* 109 運送人或船長發見未經報明之貨物，得在裝載港將其起岸，或使支付同一航程同種貨物應付最高額之運費；如有損害，並得請求賠償。前項貨物在航行中發見時，如係違禁物，或其性質足以發生損害者，船長得投棄之。
 
-* 110 旅客死亡時，其在船上之行李，船長應以最利於繼承人之方法處置之。
+* 110 船舶發航後，因不可抗力不能到達目的港而將原裝貨物運回時，縱其船舶約定為去航及歸航之運送，託運人僅負擔去航運費。
 
-* 111 共同或連接之拖船，因航海所生之損害，對被害人負連帶責任。但他拖船，對於加害之拖船，有求償權。
+* 111 船舶在航行中，因海上事故而須修繕時，如託運人於到達目的港前提取貨物者，應付全部運費。
 
-* 112 拖船與被拖船，如不屬於同一所有人時，其損害賠償之責任，應由拖船所有人負之。但契約另有訂定者，不在此限。
+* 112 船舶在航行中遭難或不能航行，而貨物仍由船長設法運到目的港時，如其運費較低於約定之運費者，託運人減支兩運費差額之半數。如新運費等於約定之運費，託運人不負擔任何費用；如新運費較高於約定之運費，其增高額由託運人負擔之。
 
-* 113 船舶之碰撞，不論發生於何地，皆依本章之規定處理之。
+* 113 因左列事由所發生之毀損或滅失，運送人或船舶所有人不負賠償責任：一、船長、海員、引水人或運送人之受僱人，因航行或管理船舶之行為而有過失者。二、海上或航路上之危險或意外事故。三、失火。四、天災。五、戰爭。六、暴動。七、公共敵人之行為。八、依法之拘捕、扣押、管制、徵用、或沒收。九、檢疫限制。十、罷工或其他勞動事故。十一、救助或意圖救助海上人命或財產。十二、包裝不固。十三、標誌不清或不符。十四、因貨物之瑕疵、變質或病態所致分量、重量之耗損、毀損或滅失。十五、貨物所有人、託運人或其代理人之行為或不行為。十六、船舶雖經注意，仍不能發現之隱有瑕疵。十七、非由於運送人或船舶所有人之故意或重大過失，或其代理人、受僱人之過失所發生之毀損或滅失。
 
-* 114 碰撞係因不可抗力而生者，被害人不得請求損害賠償。
+* 114 託運人於託運時，故意虛報貨物之性質或價值，運送人或船舶所有人對於其貨物之毀損或滅失，不負賠償責任。除貨物之性質、價值，於裝載前已經託運人聲明並註明於載貨證券者外，運送人或船舶所有人對於貨物之毀損、滅失，其賠償責任，以每件不超過三千元為限。
 
-* 115 碰撞係因於一船舶之過失所致者，由該船舶負損害賠償之責。
+* 115 為救助或意圖救助海上人命、財產或因其他正當理由變更航程者，不得認為違反運送契約，其因而發生毀損或滅失時，船舶所有人或運送人不負賠償責任。但變更航程之目的，為裝卸貨物或乘客者，不在此限。
 
-* 116 碰撞之各船舶，有共同過失時，各依其過失程度之比例，負其責任，不能判定其過失之輕重時，雙方平均負其責任。有過失之各船舶，對於因死亡或傷害所生之損害，應負連帶責任。
+* 116 貨物未經船長或運送人之同意而裝載時，運送人或船舶所有人，對於其貨物之毀損或滅失，不負責任。
 
-* 117 前二條責任，不因碰撞係由引水人之過失所致而受影響。
+* 117 運送人或船長如將貨物裝載於甲板上，致生毀損或滅失時，應負賠償責任。但經託運人之同意或航運種類或商業習慣所許者，不在此限。
 
-* 118 因碰撞所生之請求權，自碰撞日起算，經過兩年不行使而消滅。
+* 118 載貨證券之發給人，對於依載貨證券所記載應為之行為，均應負責。前項發給人，對於貨物之各連續運送人之行為，應負保證之責。但各連續運送人，僅對於自己航程中所生之毀損、滅失及遲到負其責任。
 
-* 119 船舶碰撞，不論發生於何地，若被害為中國船舶或中國人，在中國港口、河道或領水內，不論何時，法院皆得扣押加害之船舶。前項被扣押船舶，得提供相當擔保，請求放行。
+* 119 旅客之運送，除本節規定外，準用本章第一節之規定。
 
-* 120 關於碰撞之訴訟，得向左列法院起訴。一、被告之住所或營業所所在地之法院。二、碰撞發生地之法院。三、被告船泊船籍港之法院。四、船舶扣押地之法院。
+* 120 對於旅客供膳者，其膳費應包括於票價之內。
 
-* 121 船長於不甚危害其船舶、船員、旅客之範圍內，對於淹沒或其他危難之人，應盡力救助。違反前項之規定者，處三年以下有期徒刑，或拘役。
+* 121 旅客於實施意外保險之特定航線及地區，均應投保意外險，保險金額，載入客票，視同契約，其保險費包括於票價內，並以保險金額為損害賠償之最高額。前項特定航線地區及保險金額，由交通部定之。
 
-* 122 對於船舶或船舶上所有財物，施以救助或撈救而有效果者，得按其效果，請求相當之報酬。
+* 122 旅客除前條保險外，自行另加保意外險者，其損害賠償依其約定。但應以書面為之。
 
-* 123 屬於同一所有人之船舶之救助或撈救，得請求報酬。
+* 123 運送人或船長應依船票所載，運送旅客至目的港。運送人或船長違反前項規定時，旅客得解除契約；如有損害，並得請求賠償。
 
-* 124 報酬金額，由當事人協議定之。協議不成時，得聲請法院定之。
+* 124 旅客於發航二十四小時前，得給付票價十分之二，解除契約，其於發航前因死亡、疾病或其他基於本身不得已之事由，不能或拒絕乘船者，運送人得請求票價十分之一。
 
-* 125 前條規定，於施救人與船舶間，及施救人間之分配報酬之比例，準用之。
+* 125 旅客在船舶發航或航程中不依時登船，或船長依職權實行緊急處分迫令其離船者，仍應給付全部票價。
 
-* 126 於實行施救中救人者，對於船舶及財物之救助報酬金，有參加分配之權。
+* 126 船舶不於預定之日發航者，旅客得解除契約。
 
-* 127 經以正當理由拒絕施救，而仍強為施救者，不得請求報酬。
+* 127 旅客在航程中自願上陸時，仍負擔全部票價；其因疾病上陸或死亡時，僅按其已運送之航程負擔票價。
 
-* 128 船舶碰撞後，各碰撞船舶之船長，於不甚危害其船舶，船員或旅客之範圍內，對於他船舶海員及旅客，應盡力救助。各該船長，除有不可抗力之情形外，在未確知繼續救助為無益前，應停留於發生災難之處所。各該船長，應於可能範圍內，將其船舶名稱及船籍港，並開來及開往之處所，通知於他船舶。違反第一項之規定者，處五年以下有期徒刑。
+* 128 船舶因不可抗力不能繼續航行時，運送人或船長應設法將旅客運送至目的港。
 
-* 129 稱共同海損者，謂在海難中，船長為避免船舶及積貨之共同危險所為處分，而直接發生之損害及費用。
+* 129 旅客之目的港如發生天災、戰亂、瘟疫或其他特殊事故，致船舶不能進港卸客者，運送人或船長得依旅客之意願，將其送至最近之港口或送返乘船港。
 
-* 130 因船舶或貨物固有瑕疵，或因利害關係人之過失所致之損害及費用，其他關係人仍應分擔之。但對於固有瑕疵，或過失之負責人，得請求償還。
+* 130 運送人或船長在航行中為船舶修繕時，應以同等級船舶完成其航程，旅客在候船期間並應無償供給膳宿。
 
-* 131 裝載於甲板上之貨物經投棄者，不認為共同海損。但其裝載為航運種類或商業習慣所許者，不在此限。前項貨物，若經撈救，仍應分擔共同海損。
+* 131 旅客於船舶抵達目的港後，應依船長之指示即行離船。
 
-* 132 無載貨證券，亦無船長收據之貨物，或未記載於屬具目錄之屬具，經投棄者，不認為共同海損。但經撈救，仍應分擔共同海損。
+* 132 拖船與被拖船，如不屬於同一所有人時，其損害賠償之責任，應由拖船所有人負擔。但契約另有訂定者，不在此限。
 
-* 133 運費因積貨之滅失或損害，致減少或全無者，認為共同海損。但運送人因此減省之費用，應扣除之。
+* 133 共同或連接之拖船，因航行所生之損害，對被害人負連帶責任。但他拖船對於加害之拖船有求償權。
 
-* 134 貨幣、有價證券，及其他貴重物品，除經報明船長者外，不認為共同海損。
+* 134 船舶之碰撞，不論發生於何地，皆依本章之規定處理之。
 
-* 135 共同海損，應以所存留之船舶、積貨之價格，及運費之半額，與共同海損之損害額為比例，由各利害關係人分擔之。
+* 135 碰撞係因不可抗力而發生者，被害人不得請求損害賠償。
 
-* 136 關於共同海損之分擔額，船舶以到達地，到達時之價格為價格、積貨以卸載地卸載時之價格為價格。但關於積貨之價格，應扣除因滅失無須支付之運費及其他費用。
+* 136 碰撞係因於一船舶之過失所致者，由該船舶負損害賠償責任。
 
-* 137 共同海損之損害額，以到達地到達時之船舶價格，或卸載地卸載時之積貨價格定之。但關於積貨價格，應扣除因滅失或毀損無須支付之費用。
+* 137 碰撞之各船舶有共同過失時，各依其過失程度之比例負其責任；不能判定其過失之輕重時，雙方平均負其責任。有過失之各船舶，對於因死亡或傷害所生之損害，應負連帶責任。
 
-* 138 滅失或損害之貨物，於裝載時曾為不實之聲明，而所聲明之價值，少於實在之價值者，其滅失或損害，以聲明之價值為準。分擔額，以實在之價值為準。聲明之價值，多於其實在之價值者，其滅失或損害，以實在之價值為準。分擔額，以聲明之價值為準。
+* 138 前二條責任，不因碰撞係由引水人之過失所致而免除。
 
-* 139 船上所備糧食、武器、海員之衣物、薪資，及旅客之行李，皆不分擔海損。前項物品如被投棄，其損害應由各關係人分擔之。
+* 139 因碰撞所生之請求權，自碰撞日起算，經過兩年不行使而消滅。
 
-* 140 共同海損之計算，由全體關係人協議定之。協議不成時，由商事公斷處或法院定之。
+* 140 船舶在中華民國領水、港口、河道內碰撞者，法院對於加害之船舶，得扣押之。碰撞不在中華民國領水、港口、河道內，而被害者為中華民國船舶或國民，法院於加害之船舶進入中華民國領水後，得扣押之。前兩項被扣押船舶，得提供擔保，請求放行。
 
-* 141 船長對於未清償分擔額之貨物所有人，得留置其貨物。但提供擔保者，不在此限。
+* 141 關於碰撞之訴訟，得向左列法院起訴：一、被告之住所或營業所所在地之法院。二、碰撞發生地之法院。三、被告船舶船籍港之法院。四、船舶扣押地之法院。
 
-* 142 利害關係人，於受分擔後，復得其船舶或貨物之全部或一部者，應將其所受之分擔額，返還於關係人。但得將其所受損害及復得之費用扣除之。
+* 142 船長於不甚危害其船舶、海員、旅客之範圍內，對於淹沒或其他危難之人應盡力救助。違反前項之規定者，處三年以下有期徒刑或拘役。
 
-* 143 應負分擔義務之人，得委付其存留物而免分擔海損之責。
+* 143 對於船舶或船舶上所有財物施以救助或撈救而有效果者，得按其效果請求相當之報酬。
 
-* 144 因共同海損所生之債權，自計算確定之日起，經過一年不行使而消滅。
+* 144 屬於同一所有人之船舶救助或撈救，仍得請求報酬。
 
-* 145 關於海上保險，本章無規定者，適用保險法之規定。
+* 145 報酬金額，由當事人協議定之；協議不成時，得請求航政機關調處或由法院裁判之。
 
-* 146 保險契約，應以書面為之。並應載明左列事項。一、訂約之年月日。二、當事人之姓名及住所。三、所保危險之性質。四、保險責任開始之時日，及保險期間。五、保險金額。六、保險費。七、無效及失權之原因。利害關係人，皆得向保險人請求保險單之謄本。
+* 146 前條規定，於施救人與船舶間及施救人間之分配報酬之比例準用之。
 
-* 147 得以貨幣估價之物而屬於航海危險者，皆得為保險之標的物。
+* 147 於實行施救中救人者，對於船舶及財物之救助報酬金，有參加分配之權。
 
-* 148 保險期間，除契約別有訂定外，關於船舶及其屬具，自船舶起錨或解纜之時，以迄目的港投錨或繫纜之時，為其期間，關於貨物，自貨物離陸之時，以迄於其目的港起陸之時，為其期間。
+* 148 經以信號聯絡，有正當理由拒絕施救，而仍強為施救者，不得請求報酬。
 
-* 149 保險人得將其所保之險，向他人為再保險。本章關於保險之規定，於再保險準用之。
+* 149 船舶碰撞後，各碰撞船舶之船長於不甚危害其船舶、海員或旅客之範圍內，對於他船舶船長、海員及旅客，應盡力救助。各該船長，除有不可抗力之情形外，在未確知繼續救助為無益前，應停留於發生災難之處所。各該船長，應於可能範圍內，將其船舶名稱及船籍港並開來及開往之處所，通知於他船舶。違反第一項之規定者，處五年以下有期徒刑。
 
-* 150 保險人對於保險標的物，因海上一切事變及災害所生之滅失、損害及費用，負其責任。
+* 150 稱共同海損者，謂在海難中船長為避免船舶及貨載之共同危險所為處分，而直接發生之損害及費用。
 
-* 151 戰爭之危險，除契約有反對之訂定外，保險人應負責任。
+* 151 共同海損，應以左列各項與共同海損之總額為比例，由各利害關係人分擔之：一、所存留之船舶。二、所存留貨載之價格。三、運費之半額。四、為共同海損行為所犧牲之財物。
 
-* 152 保險於危險發生前，因可歸責於要保人，或被保險人之事由而解除契約者，保險人得請求約定保險費之半數。
+* 152 關於共同海損之分擔額，船舶以到達地、到達時之價格為準，貨物以卸載地、卸載時之價格為準。但關於貨物之價格，應扣除因滅失無須支付之運費及其他費用。
 
-* 153 因要保人、或被保險人、或其代理人之重大過失所生之危險，保險人不負責任。
+* 153 共同海損之損害額，以到達地、到達時之船舶價格，或卸載地、卸載時之貨物價格定之。但關於貨物價格，應扣除因毀損或滅失無須支付之費用。
 
-* 154 就危險之有無為保險者，經證明在契約訂立前，要保人或被保險人已知船舶之滅失，或保險人已知船舶之安全到達者，其契約無效。
+* 154 運費因貨載之毀損或滅失，致減少或全無者，認為共同海損。但運送人因此減省之費用，應扣除之。
 
-* 155 貨物保險時，未確定裝運之船舶者，要保人或被保險人於知其已裝載於船舶時，應將該船舶之名稱及國籍，即通知於保險人。不為通知者，保險契約失其效力。
+* 155 因船舶或貨物固有瑕疵，或因利害關係人之過失所致之損害及費用，其他關係人仍應分擔之。但對於固有瑕疵或過失之負責人，得請求償還。
 
-* 156 要保人或被保險人，於保險人破產時，得解除契約，但以保險人不提供擔保者為限。
+* 156 裝載於甲板上之貨物經投棄者，不認為共同海損。但其裝載為航運習慣所許者，不在此限。前項貨物，若經撈救者，仍應分擔共同海損。
 
-* 157 關於船舶之保險，以保險人責任開始時之船舶價額，為保險價額。
+* 157 無載貨證券亦無船長收據之貨物，或未記載於目錄之設備、屬具，經投棄者，不認為共同海損。但經撈救者，仍應分擔共同海損。
 
-* 158 關於貨物之保險，以裝載地裝載時之貨物價額，裝載費所納稅捐應付之運費、保險費及可期待之利得，為保險價額。
+* 158 貨幣、有價證券或其他貴重物品，除經報明船長者外，不認為共同海損。但經撈救者，仍應分擔共同海損。
 
-* 159 關於運費之保險，以運送契約內所載明之運費額，為保險價額。運送契約未載明時，以卸載時卸載港認為相當之運費額，為保險價額。以淨運費為保險標的物，而其總額未經約定者，以總運費百分之六十為淨運費。
+* 159 毀損或滅失之貨物，於裝載時曾為不實之聲明，而所聲明之價值少於實在之價值者，其毀損或滅失，以聲明之價值為準，分擔額以實在之價值為準；聲明之價值多於其實在之價值者，其毀損或滅失以實在之價值為準，分擔額以聲明之價值為準。
 
-* 160 關於因貨物之到達時應有利得之保險，其保險價額未經契約約定者，以保險金額，視為保險價額。
+* 160 船上所備糧食、武器，海員之衣物、薪津，及旅客之行李，皆不分擔海損。前項物品，如被投棄，其損害應由各關係人分擔之。
 
-* 161 貨物之損害額，依其在到達港，於完好狀態應有之價值，與其受損狀態之價值，比較定之。
+* 161 共同海損之計算，由全體關係人協議定之；協議不成時，得請求航政機關調處，或商務仲裁協會仲裁，或由法院裁判之。
 
-* 162 受損害之船舶或貨物，由船長依第五十三條第五十四條之規定，或因不可抗力而變賣者，以變賣價額與保險價額之差額為損害額。但因變賣後所減省之一切費用，應扣除之。
+* 162 運送人或船長對於未清償分擔額之貨物所有人，得留置其貨物。但提供擔保者，不在此限。
 
-* 163 被保險船舶之委付，得於有左列各款情形之一時為之。一、船舶被捕獲，或沉沒，或破壞時。二、船舶因海損所致之修繕費總額，達於保險金額四分之三時。三、船舶不能為修繕時。四、船舶行蹤不明，或被官署扣押，已逾四個月仍未放行時。
+* 163 利害關係人於受分擔額後，復得其船舶或貨物之全部或一部者，應將其所受之分擔額返還於關係人。但得將其所受損害及復得之費用扣除之。
 
-* 164 被保險貨物之委付，得於有左列各款情形之一時為之。一、船舶因遭難或其他事變，不能航海，已逾四個月而貨物尚未交付於受貨人、要保人或被保險人時。二、裝運貨物之船舶，行蹤不明已逾四個月時。三、因應由保險人負保險責任之損害，於航海中變賣貨物，達於其全價值四分之三時。四、貨物之毀損或腐壞，已失其全價值四分之三時。
+* 164 應負分擔義務之人，得委棄其存留物而免分擔海損之責。
 
-* 165 運費之委付，得於船舶行蹤不明已逾四個月時為之。
+* 165 因共同海損所生之債權，自計算確定之日起，經過一年不行使而消滅。
 
-* 166 專就戰事危險為保險者，被保險之船舶、貨物，或運費之委付，得在被捕獲或被扣留時為之。
+* 166 關於海上保險，本章無規定者，適用保險法之規定。
 
-* 167 委付，應就保險標的物之全部為之。但僅一部發生委付之原因者，得就其一部份為之。委付不得附有條件。
+* 167 航行中，可能發生危險之財產權益，得以貨幣估價者，皆得為保險標的。
 
-* 168 委付經承諾或經判決為有效後，自發生委付原因之日起，保險標的物即視為保險人所有。
+* 168 保險期間除契約別有訂定外，關於船舶及其設備、屬具，自船舶起錨或解纜之時，以迄目的港投錨或繫纜之時，為其期間。關於貨物，自貨物離岸之時，以迄目的港起岸之時，為其期間。
 
-* 169 被保險之船舶，於依第一百六十三條第四款之規定為委付後歸來者，保險人仍應給付保險金額。
+* 169 保險人對於保險標的物，除契約另有規定外，因海上一切事變及災害所生之毀損、滅失及費用，負賠償責任。
 
-* 170 要保人或被保險人，於知保險之危險發生後，應即通知保險人。
+* 170 戰事之危險，除契約有反對之訂定外，保險人應負賠償責任。
 
-* 171 保險人應於收到要保人或被保險人證明文件後三十日內，給付保險金額。保險人對於前項證明文件如有疑義，而要保人或被保險人提供擔保時，仍應將保險金額全部給付。前項情形，保險人之金額返還請求權，自給付後經過一年不行使而消滅。
+* 171 保險人得約定保險標的之一部分，應由要保人自行負擔由危險而生之損失。有前項約定時，要保人不得將未經保險之部分另向他保險人訂立保險契約。
 
-* 172 要保人或被保險人，自接到貨物之日起，一個月內不將貨物所受損害通知保險人或其他代理人時，視為無損害。
+* 172 保險人對於要保人或被保險人，為避免或減輕損失之必要行為所生之費用，負償還之責，其償還數額與賠償金額合計雖超過保險標的之價值，仍應償還。但契約另有訂定者，不在此限。保險人對於前項費用之償還，以保險金額對於保險標的之價值，比例定之。
 
-* 173 委付之權利，於知委付原因發生後，自得為委付之日起，經過四個月不行使而消滅。
+* 173 因要保人或被保險人或其代理人之故意或重大過失所致之損失，保險人不負賠償責任。但本法第一百十三條第一款及第十一款之情事，不在此限。
 
-* 174 因保險契約所生之請求權，除本法另有規定外，自得為請求之日起，經過兩年不行使而消滅。
+* 174 貨物保險時，未確定裝運之船舶者，要保人或被保險人於知其已裝載於船舶時，應將該船舶之名稱及國籍，即通知於保險人，不為通知者，保險契約失其效力。
+
+* 175 要保人或被保險人於保險人破產時，得解除契約。但以保險人不提供擔保者為限。
+
+* 176 關於船舶之保險，以保險人責任開始時之船舶價額，為保險價額。
+
+* 177 關於貨物之保險，以裝載地、裝載時之貨物價額，裝載費、稅捐、應付之運費、保險費，及可期待之利得，為保險價額。
+
+* 178 關於因貨物之到達時，應有利得之保險，其保險價額未經契約約定者，以保險金額視為保險價額。
+
+* 179 關於運費之保險，以運送契約內所載明之運費額及保險費為保險價額；運送契約未載明時，以卸載時、卸載港認為相當之運費額及其保險費為保險價額。以淨運費為保險標的，而其總額未經約定者，以總運費百分之六十為淨運費。
+
+* 180 貨物之損害額，依其在到達港於完好狀態下所應有之價值，與其受損狀態之價值比較定之。
+
+* 181 受損害之船舶或貨物，如經變賣者，以變賣價額與保險價額之差額為損害額。但因變賣後所減省之一切費用，應扣除之。前項變賣，除由於不可抗力或船長依法處理者外，應得保險人之同意。
+
+* 182 海上保險之委付，指被保險人於發生後列四條委付原因時，得將保險標的物之一切權利，移轉於保險人，而請求支付該保險標的物之全部保險金額。
+
+* 183 被保險船舶之委付，得於有左列各款情形之一時為之：一、船舶被捕獲或沉沒或破壞時。二、船舶因海損所致之修繕費總額達於保險金額四分之三時。三、船舶不能為修繕時。四、船舶行蹤不明，或被扣押已逾四個月仍未放行時。
+
+* 184 被保險貨物之委付，得於有左列各款情形之一時為之：一、船舶因遭難或其他事變不能航行已逾四個月，而貨物尚未交付於受貨人、要保人或被保險人時。二、裝運貨物之船舶，行蹤不明已逾四個月時。三、因應由保險人負保險責任之損害，於航行中變賣貨物，達於其全價值四分之三時。四、貨物之毀損或腐壞，已失其全價值四分之三時。
+
+* 185 運費之委付，得於船舶行蹤不明已逾四個月時為之。
+
+* 186 專就戰事危險為保險者，被保險之船舶、貨物或運費之委付，得在被捕獲或被扣留時為之。
+
+* 187 委付應就保險標的物之全部為之。但保險單上僅有其中一種標的物發生委付原因時，得就該一種標的物為委付，請求其保險金額。委付不得附有條件。
+
+* 188 委付經承諾或經判決為有效後，自發生委付原因之日起，保險標的物即視為保險人所有。
+
+* 189 被保險之船舶，於依第一百八十三條第四款之規定為委付後歸來者，保險人仍應給付保險金額。
+
+* 190 要保人或被保險人，於知保險之危險發生後，應即通知保險人。
+
+* 191 保險人應於收到要保人或被保險人證明文件後，三十日內給付保險金額。保險人對於前項證明文件如有疑義，而要保人或被保險人提供擔保時，仍應將保險金額全部給付。前項情形，保險人之金額返還請求權，自給付後經過一年不行使而消滅。
+
+* 192 要保人或被保險人，自接到貨物之日起，一個月內不將貨物所受損害通知保險人或其代理人時，視為無損害。
+
+* 193 委付之權利，於知悉委付原因發生後，自得為委付之日起，經過四個月不行使而消滅。
+
+* 194 本法自公布日施行。
 
