中華民國刑法 1954.10.12

--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -316,7 +316,7 @@
 
 * 159 公然冒用公務員服飾、徽章或官銜者，處五百元以下罰金。
 
-* 160 意圖侮辱中華民國，而公然損壞、除去或汙辱中華民國之國旗、國章者，處一年以下有期徒刑、拘役或三百元以下罰金。意圖侮辱創立中華民國之孫先生，而公然損壞、除去或汙辱其遺像者亦同。
+* 160 意圖侮辱中華民國，而公然損壞、除去或汙辱中華民國之國徽、國旗者，處一年以下有期徒刑、拘役或三百元以下罰金。意圖侮辱創立中華民國之孫先生，而公然損壞、除去或汙辱其遺像者亦同。
 
 * 161 依法逮捕、拘禁之人脫逃者，處一年以下有期徒刑。損壞拘禁處所械具或以強暴、脅迫犯前項之罪者，處五年以下有期徒刑。聚眾以強暴、脅迫犯第一項之罪者，在場助勢之人，處三年以上、十年以下有期徒刑；首謀及下手實施強暴、脅迫者，處五年以上有期徒刑。前三項之未遂犯罰之。
 
