--- a/行政-經濟及能源/礦業法.md
+++ b/行政-經濟及能源/礦業法.md
@@ -2,7 +2,7 @@
 
 * 1 中華民國領域內之礦，均為國有，非依本法取得礦業權，不得探採。
 
-* 2 本法所稱之礦為左列各種：金礦。銀礦。銅礦。鐵礦。錫礦。鉛礦。銻礦。鎳礦。鈷礦。鋅礦。鋁礦。汞礦。鉍礦。鉬礦。鉑礦。銥礦。鉻礦。鈾礦。銧礦。鎢礦。鎂礦。釩礦。鉀礦。硫磺礦。燐礦。砒礦。水晶。石棉。雲母。石膏。岩鹽。明礬。金剛石。天然鹼。重晶石。硝酸鹽。硼砂。筆鉛。綠松石。弗石。火粘土。滑石。磁土。大理石。苦土石。煤炭類。石油類。煤氣類。琢磨沙類。顏料石類。其他經國民政府指定者。
+* 2 本法所稱之礦為左列各種：金礦。銀礦。銅礦。鐵礦。錫礦。鉛礦。銻礦。鎳礦。鈷礦。鋅礦。鋁礦。汞礦。鉍礦。鉬礦。鉑礦。銥礦。鉻礦。鈾礦。銧礦。鎢礦。錳礦。鎂礦。釩礦。鉀礦。硫磺礦。燐礦。砒礦。水晶。石棉。雲母。石膏。岩鹽。明礬。金剛石。天然鹼。重晶石。硝酸鹽。硼砂。筆鉛。綠松石。弗石。火粘土。滑石。磁土。大理石。苦土石。煤炭類。石油類。煤氣類。琢磨沙類。顏料石類。其他經國民政府指定者。
 
 * 3 探礦、採礦及其附屬事業為礦業。
 
@@ -184,7 +184,7 @@
 
 * 92 礦區稅為地面租稅以外之稅，其稅率如左。一、探礦區，每公畝按年納國幣一分，砂礦在河底者，每河道長十公尺，按年納國幣一分。二、採礦區，每公畝或河道每長十公尺，自開辦起五年內，按年納國幣二分，自第六年起，按年納國幣五分。採礦權者，因礦工、罷工或其他不可抗力，致不能工作繼續在二個月以上時，得請求免納不能工作期間之礦區稅。
 
-* 93 礦產稅，按照礦產物價格，納百分之二。前項之礦產物價格，以出產地附近市場之平均市價為標準，由農礦部按照省主管官署報告，核定之。
+* 93 礦產稅按照礦產物價格，納百分之二至百分之十。前項之礦產物價格，以出產地附近市場之平均市價為標準，由農礦部、財政部按照省主管官署報告，會同核定之。
 
 * 94 礦區稅每年分二期，於一月七月繳納。礦產稅依照實際產額約計市價，按月繳納。前項按月繳納之礦產稅額，於核定平均市價後逐年清結，年終繳納之。
 
@@ -230,7 +230,7 @@
 
 * 115 拒絕或妨礙該管官吏檢查關於礦業之簿記或物件者，處五十元以下之罰金。
 
-* 116 凡逃稅或企圖逃稅者，處應納稅額三倍以上之罰金。
+* 116 凡漏稅者，處應納稅額二倍以上五倍以下之罰金。
 
 * 117 礦業權者於其代理人僱用人或其他之從業者，關於業務違犯本法時，不得以非出己意，免本法之處罰。
 
