--- a/行政-經濟及能源/礦業法.md
+++ b/行政-經濟及能源/礦業法.md
@@ -230,7 +230,7 @@
 
 * 115 拒絕或妨礙該管官吏檢查關於礦業之簿記或物件者，處五十元以下之罰金。
 
-* 116 凡漏稅者，處應納稅額二倍以上五倍以下之罰金。
+* 116 凡漏繳礦產稅者，處應納稅額二倍以上十倍以下之罰金，其情節較重者，並得將漏稅貨品沒收之。
 
 * 117 礦業權者於其代理人僱用人或其他之從業者，關於業務違犯本法時，不得以非出己意，免本法之處罰。
 
